--- a/codigo-fonte/caixa-fechamento.html
+++ b/codigo-fonte/caixa-fechamento.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/caixa-fechamento.css">
@@ -12,94 +13,93 @@
   <script src="scripts/config.js" type="text/javascript"></script>
 
 
- 
+
   <title>Nexum - Caixa</title>
 </head>
-<body onload="statusonload()">
-    <header>
-      <nav>
-        </div>
-        <div class="side-bar active">
-          <div class="menu">
-            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
-            <div class="item">
-              <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-                <a class="sub-item">Fechamento</a>
-              </div>
-            </div>
-            <div class="item">
-              <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
-                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
-              </div>
-            </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
-            <div class="item">
-                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
-                <div class="sub-menu">
-                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a class="sub-item" onclick="logout()">Sair</a>
-                </div>
-              </div>
-        </div>
-        </div>
 
-      </nav>
-    </header>
-    <div class="cabecalho">
-      <h1>Fechamento de Caixa</h1>
-      <div class="tagusuario">
-        <i class="bi bi-person-circle"></i>
-        <label ><span id="tagusuario"></span></label>      
+<body onload="statusonload()">
+  <header>
+    <nav>
       </div>
-      <div class="tagsgp">
-        <label >Status SGP: <span id="statusconexao"></span></label>      
-      </div>
-    </div>
-    <div class="corpo">
-      <div class="tabelacaixafecha divcorpo">
-        <div class="boxcaixafecha divcorpo">
-          <form action="">
-            <fieldset class="fieldsetcaixafecha">
-              <br>
-              <div class="inputBox-caixafecha">
-                <label for="dataini" class="labelInput-caixafecha">Data Fechamento:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-caixafecha" required>
-              </div>
-              <input type="submit" name="submit" value="Fechar Caixa" id="submit-caixafecha">
-            </fieldset>
-          </form>
+      <div class="side-bar active">
+        <div class="menu">
+          <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+          <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+          <div class="item">
+            <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
+              <a class="sub-item">Fechamento</a>
+            </div>
+          </div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
+              <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+              <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
+            </div>
+          </div>
+          <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+              <a class="sub-item" onclick="logout()">Sair</a>
+            </div>
+          </div>
         </div>
-        <table class="tabelavendas">
-          <thead>
-            <tr class="tabcabeca">
-              <th id="valor">Valor do Caixa</th>
-              <th id="tipo">Tipo de Operação</th>
-            </tr>
-          </thead>
-          <tbody id="tabela">
-            
-          </tbody>
-        </table>
+      </div>
+
+    </nav>
+  </header>
+  <div class="cabecalho">
+    <h1>Fechamento de Caixa</h1>
+    <div class="tagusuario">
+      <i class="bi bi-person-circle"></i>
+      <label><span id="tagusuario"></span></label>
+    </div>
+    <div class="tagsgp">
+      <label>Status SGP: <span id="statusconexao"></span></label>
+    </div>
+  </div>
+  <div class="corpo">
+    <div class="tabelacaixafecha divcorpo">
+      <div class="boxcaixafecha divcorpo">
+        <form action="">
+          <fieldset class="fieldsetcaixafecha">
+            <br>
+            <input type="button" onclick="encerrar()" name="submit" value="Fechar Caixa" id="submit-caixafecha">
+          </fieldset>
+        </form>
+        <div class="corpotable">
+          <table class="tabelavendas">
+            <thead>
+              <tr class="tabcabeca">
+                <th id="valor">Valor</th>
+                <th id="tipo">Tipo de Operação</th>
+              </tr>
+            </thead>
+            <tbody id="tabela">
+
+            </tbody>
+          </table>
+        </div>
         <div class="boxresultado">
           <form action="">
             <fieldset class="fieldsetcaixafecha">
               <br>
               <div class="inputBox-caixafecha">
-                <label for="dataini" class="labelInput-caixafecha">Valor Total: R$ 1.200,00</label>
-              <br>
+                <label for="dataini" class="labelInput-caixafecha">Valor Total: R$ <span
+                    id="resultado"></span></label>
+                <br>
             </fieldset>
           </form>
         </div>
       </div>
-
-    </div>
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
@@ -107,6 +107,9 @@
     <script src="scripts/init-firebase.js"></script>
     <script src="scripts/block.js" type="text/javascript"></script>
     <script src="scripts/home.js" type="text/javascript"></script>
-    
+    <script src="scripts/caixa-fechamento.js" type="text/javascript"></script>
+
+
 </body>
+
 </html>
