--- a/codigo-fonte/caixa-lancamento.html
+++ b/codigo-fonte/caixa-lancamento.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/caixa-lancamento.css">
@@ -13,106 +14,108 @@
 
 
 
- 
+
   <title>Nexum - Caixa</title>
 </head>
-<body onload="statusonload()">
-    <header>
-      <nav>
-        </div>
-        <div class="side-bar active">
-          <div class="menu">
-            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
-            <div class="item">
-              <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a class="sub-item">Lançamentos</a>
-                <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
-              </div>
-            </div>
-            <div class="item">
-              <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
-                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
-              </div>
-            </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
-            <div class="item">
-                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
-                <div class="sub-menu">
-                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a class="sub-item" onclick="logout()">Sair</a>
-                </div>
-              </div>
-        </div>
-        </div>
 
-      </nav>
-    </header>
-    <div class="cabecalho">
-      <h1>Lançamento de Caixa</h1>
-      <div class="tagusuario">
-        <i class="bi bi-person-circle"></i>
-        <label ><span id="tagusuario"></span></label>      
+<body onload="statusonload()">
+  <header>
+    <nav>
       </div>
-      <div class="tagsgp">
-        <label >Status SGP: <span id="statusconexao"></span></label>      
-      </div>
-    </div>
-    <div class="corpo">   
-      <div class="tabelacaixalancamento divcorpo">
-        <div class="boxcaixalancamento divcorpo">
-          <form action="">
-            <fieldset class="fieldsetcaixalancamento">
-              <br>
-              <div class="inputBox-caixalancamento">
-                <label for="dataini" class="labelInput-caixalancamento">Data:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-caixalancamento" required>
-              </div>
-              <br>
-              <br>
-              <div class="inputBox-caixalancamento">
-                <label for="valor" class="labelInput-caixalancamento">Valor:</label>
-                <input type="number" name="valor" id="valor" class="inputUser-caixalancamento" required>
-              </div>
-              <div class="inputBox-caixalancamento">
-                <label for="comodato" class="labelInput-pdv">Tipo de Lançamento: </label>
-                <input type="radio" name="comodato" id="comodato" class="radio-venda" required>
-                <label for="comodato" class="labelInput-pdv">Entrada</label>
-                <input type="radio" name="comodato" id="venda" class="radio-comodato" required >
-                <label for="comodato" class="labelInput-pdv">Saida</label>
-              </div>
-              <br>
-              <input type="submit" name="submit" value="Concluir" id="submit-caixalancamento">
-            </fieldset>
-          </form>
+      <div class="side-bar active">
+        <div class="menu">
+          <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+          <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+          <div class="item">
+            <a class="sub-btn caixa"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a class="sub-item">Lançamentos</a>
+              <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
+            </div>
+          </div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-bar-chart-fill"></i>Relatório<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
+              <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+              <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
+            </div>
+          </div>
+          <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+              <a class="sub-item" onclick="logout()">Sair</a>
+            </div>
+          </div>
         </div>
-        <table class="tabelavendas">
-          <thead>
-            <tr class="tabcabeca">
-              <th id="data">Data da Operação</th>
-              <th id="valor">Valor</th>
-              <th id="user">Usuário</th>
-              <th id="tipo">Tipo de Operação</th>
-              <th id="acao">Ação</th>
-            </tr>
-          </thead>
-          <tbody id="tabela">
-  
-          </tbody>
-        </table>
       </div>
-    </div> 
-    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
-    <script src="scripts/init-firebase.js"></script>
-    <script src="scripts/block.js" type="text/javascript"></script>
-    <script src="scripts/home.js" type="text/javascript"></script>
-  
+
+    </nav>
+  </header>
+  <div class="cabecalho">
+    <h1>Lançamento de Caixa</h1>
+    <div class="tagusuario">
+      <i class="bi bi-person-circle"></i>
+      <label><span id="tagusuario"></span></label>
+    </div>
+    <div class="tagsgp">
+      <label>Status SGP: <span id="statusconexao"></span></label>
+    </div>
+  </div>
+  <div class="corpo">
+    <div class="tabelacaixalancamento divcorpo">
+      <div class="boxcaixalancamento divcorpo">
+        <form action="">
+          <fieldset class="fieldsetcaixalancamento">
+            <br>
+            <br>
+            <br>
+            <div class="inputBox-caixalancamento">
+              <label for="valor" class="labelInput-caixalancamento">Valor:</label>
+              <input type="number" name="valor" id="valor" class="inputUser-caixalancamento" required>
+            </div>
+            <div class="inputBox-caixalancamento">
+              <label for="comodato" class="labelInput-pdv">Tipo de Lançamento: </label>
+              <input type="radio" name="comodato" id="comodato" class="radio-venda" value="entrada" required>
+              <label for="comodato" class="labelInput-pdv">Entrada</label>
+              <input type="radio" name="comodato" id="venda" class="radio-comodato" value="saida" required>
+              <label for="comodato" class="labelInput-pdv">Saida</label>
+            </div>
+            <br>
+            <input type="button" onclick="insereDados()" name="submit" value="Concluir" id="submit-caixalancamento">
+          </fieldset>
+        </form>
+        <div class="corpotable">
+          <table class="tabelavendas">
+            <thead>
+              <tr class="tabcabeca">
+                <th id="data">Data da Operação</th>
+                <th id="valor">Valor</th>
+                <th id="user">Usuário</th>
+                <th id="tipo">Tipo de Operação</th>
+                <th id="acao">Ação</th>
+              </tr>
+            </thead>
+            <tbody id="tabela">
+
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-firestore-compat.js"></script>
+      <script src="scripts/init-firebase.js"></script>
+      <script src="scripts/block.js" type="text/javascript"></script>
+      <script src="scripts/home.js" type="text/javascript"></script>
+      <script src="scripts/caixa-lancamento.js" type="text/javascript"></script>
+
+
 </body>
+
 </html>
