--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -1,118 +1,112 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/relatorio-vendas.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
   <script src="scripts/config.js" type="text/javascript"></script>
 
- 
+
   <title>Nexum - Relatório</title>
 </head>
+
 <body onload="statusonload()">
-    <header>
-      <nav>
-        </div>
-        <div class="side-bar active">
-          <div class="menu">
-            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
-            <div class="item">
-              <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-                <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
-              </div>
+  <header>
+    <nav>
+      </div>
+      <div class="side-bar active">
+        <div class="menu">
+          <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+          <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
+              <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
             </div>
-            <div class="item">
-              <a class="sub-btn relatorio"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
-              <div class="sub-menu">
-                <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
-                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
-              </div>
+          </div>
+          <div class="item">
+            <a class="sub-btn relatorio"><i class="bi bi-bar-chart-fill"></i>Relatório<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
+              <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+              <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
             </div>
-            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
-            <div class="item">
-                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
-                <div class="sub-menu">
-                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-                  <a class="sub-item" onclick="logout()">Sair</a>
-                </div>
-              </div>
+          </div>
+          <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+          <div class="item">
+            <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i
+                class="bi bi-caret-right-fill dropdown"></i></a>
+            <div class="sub-menu">
+              <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+              <a class="sub-item" onclick="logout()">Sair</a>
+            </div>
+          </div>
         </div>
-        </div>
+      </div>
 
-      </nav>
-    </header>
-    <div class="cabecalho">
-      <h1>Relatório - Vendas</h1>
-      <div class="tagusuario">
-        <i class="bi bi-person-circle"></i>
-        <label ><span id="tagusuario"></span></label>     
-      </div>
-      <div class="tagsgp">
-        <label >Status SGP: <span id="statusconexao"></span></label>      
-      </div>
+    </nav>
+  </header>
+  <div class="cabecalho">
+    <h1>Relatório - Vendas</h1>
+    <div class="tagusuario">
+      <i class="bi bi-person-circle"></i>
+      <label><span id="tagusuario"></span></label>
     </div>
-    <div class="corpo">
-      <div class="tabelarelvendas divcorpo">
-        <div class="boxrelvendas divcorpo">
-          <form action="">
-            <fieldset class="fieldsetrelvendas">
-              <br>
-              <div class="inputBox-relvendas" >
-                <label for="dataini" class="labelInput-relvendas">Data Inicial:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-relvendas" required>
-              </div>
-              <br>
-              <br>
-              <div class="inputBox-relvendas">
-                <label for="dataini" class="labelInput-relvendas">Data Inicial:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-relvendas" required>
-              </div>
-              <div class="inputBox-relvendas">
-                <label for="produto" class="labelInput-relvendas">Produto:</label>
-                <input type="text" name="produto" id="produto" class="inputUser-relvendas" required>
-              </div>
-              <br>
-              <input type="submit" name="submit" value="Pesquisar" id="submit-relvendas">
-            </fieldset>
-          </form>
-        </div>
-        <table class="tabelavendas">
-          <thead>
-            <tr class="tabcabeca">
-              <th id="data">Data da Venda</th>
-              <th id="valor">Valor</th>
-              <th id="user">Produto</th>
-              <th id="user">Usuário</th>
+    <div class="tagsgp">
+      <label>Status SGP: <span id="statusconexao"></span></label>
+    </div>
+  </div>
+  <div class="corpo">
+    <div class="tabelarelvendas divcorpo">
+      <div class="boxrelvendas divcorpo">
+        <form action="">
+          <fieldset class="fieldsetrelvendas">
+            <br>
+            <div class="inputBox-relvendas">
+              <label for="produto" class="labelInput-relvendas">Pesquisa:</label>
+              <input type="text" name="produto" id="busca" class="inputUser-relvendas" required>
+            </div>
+            <br>
+            <input type="button" onclick="filtradados()" name="submit" value="Pesquisar" id="submit-relvendas">
+            <input type="button" onclick="location.reload()" name="submit" value="Limpar" id="submit-relvendas">
+          </fieldset>
+        </form>
+        <div class="corpotable">
+          <table class="tabelavendas">
+            <thead>
+              <tr class="tabcabeca">
+                <th id="data">Data da Venda</th>
+                <th id="valor">Valor</th>
+                <th id="produto">Produto</th>
+                <th id="user">Usuário</th>
 
-            </tr>
-          </thead>
-          <tbody id="tabela">
- 
-          </tbody>
-        </table>
+              </tr>
+            </thead>
+            <tbody id="tabela">
+
+            </tbody>
+          </table>
+        </div>
         <div class="boxresultado">
           <form action="">
             <fieldset class="fieldsetrelvendas">
               <br>
               <div class="inputBox-relvendas">
-                <label for="dataini" class="labelInput-relvendas">Valor Total: R$ 1.200,00</label>
-              <br>
+                <label for="dataini" class="labelInput-relvendas">Valor Total: R$ <span id="resultado"></span></label>
+                <br>
             </fieldset>
           </form>
         </div>
       </div>
-
-    </div>
 
     </div>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
@@ -121,6 +115,9 @@
     <script src="scripts/init-firebase.js"></script>
     <script src="scripts/block.js" type="text/javascript"></script>
     <script src="scripts/home.js" type="text/javascript"></script>
-      
+    <script src="scripts/relatorio-vendas.js" type="text/javascript"></script>
+
+
 </body>
+
 </html>
